fix contrast issue with clocks on light mode
Fixes: https://github.com/cwegrzyn/iron-vault/issues/108

--- a/src/clocks/css/clocks.css
+++ b/src/clocks/css/clocks.css
@@ -12,11 +12,9 @@
       max-width: 300px;
     }
     pointer-events: none;
-    fill: orange;
     fill: var(--interactive-accent);
     fill-opacity: 1;
-    stroke: orange;
-    stroke: var(--interactive-normal);
+    stroke: var(--background-modifier-border);
     stroke-width: 4;
     aspect-ratio: 1;
 
@@ -27,7 +25,7 @@
         &:hover {
           fill: var(--interactive-accent-hover);
           & ~ .clock-segment {
-            fill-opacity: 0;
+            fill: var(--interactive-normal);
           }
         }
       }
@@ -35,11 +33,9 @@
 
     &:not(:hover) {
       & .clock-segment {
-        fill-opacity: 1;
-
         &[aria-selected="true"] {
           & ~ .clock-segment {
-            fill-opacity: 0;
+            fill: var(--interactive-normal);
           }
         }
       }
@@ -47,7 +43,7 @@
 
     &[aria-valuenow="0"]:not(:hover) {
       & .clock-segment {
-        fill-opacity: 0;
+        fill: var(--interactive-normal);
       }
     }
 
